tests/TypingSpec/valid/prog/let-pat-pair-2.algst
pairId2 : ∀(a:TU) (b:TU). (a, b) -> (a, b)
pairId2 ab =
  let (,) a b = ab in
  (a, b)
