tests/TypingSpec/invalid/kinds/arrow-kind-1.algst
forall (a:P). a -> D0_TL
